django_yml/sampleapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: django-sample-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app: k8s-django-sampleapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
